<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Košice - Západ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
<!--  MENU STRINGS    -->
    <string name="news">NOVINKY</string>
    <string name="traffic_parking">DOPRAVA/PARKOVANIE</string>
    <string name="places">MIESTA</string>
    <string name="free_time">VOĽNÝ ČAS</string>
    <string name="report">ČISTOTA</string>
    <string name="traffic">DOPRAVA</string>
    <string name="contacts">KONTAKTY</string>
    <string name="matrika">MATRIKA</string>
    <string name="atrium">ÁTRIUM</string>
  
    <string name="office_board">URADNÁ TABUĽA</string>
    <string name="office_main_data">ZÁKL. ÚDAJE O ÚRADE</string>
    <string name="mayor">STAROSTA</string>
    <string name="assholes">POSLANCI</string>
    <string name="elections">VÝSLEDKY VOLIEB</string>
    
    
<!--     NEWS	 -->
    <string name="read_more">Čítať viac &gt;</string>
    
<!--     REPORT 	-->
    <string name="photo">Fotografia </string>
    <string name="desc">Popis </string>
    <string name="of_report">hlásenia</string>
    <string name="please_wait">Čakajte prosím</string>
    <string name="send">Odoslať</string>
    <string name="address_not_found">Adresa sa nenašla</string>
    <string name="problem_report">Hlásenie o probléme</string>
    <string name="send_mail_by">Poslať mail</string>
    
<!--     MORE 	-->
	<string name="appl">Aplikácia MČ Košice - Západ vyvinutá Luminosity Digital</string>
	<string name="web">www.luminosity.sk</string>
	<string name="lumino_desc">Webové a mobilné riešenia na mieru</string>
    <string name="programator">Programovanie: Denis Valdman</string>
    <string name="grafik">Grafika: Martin Koniar</string>
    <string name="copyright">Copyright \u00A9  2014 Košice Západ</string>
    
<!--     MEMBER DETAIL 	-->
	<string name="member_age">Vek:</string>
	<string name="member_job">Povolanie:</string>
	<string name="member_vote_location">Voľebný obvod:</string>
	<string name="member_time_interval">Funkčné obdobie:</string>
	<string name="member_coalition">Kandidoval za koalíciu:</string>
	<string name="member_function">Funkcia:</string>
	<string name="member_party">Poslanecký klub:</string>
	
<!--     MAYOR DETAIL 	-->
	<string name="mayor_title">Starosta mestskej časti:</string>
	
<!--     CONTACTS 	-->
	<string name="contacts_main_caption">MIESTNY ÚRAD KOŠICE - ZÁPAD</string>	
	<string name="contacts_mayors_office">Kancelária starostu</string>
	<string name="contacts_tel">Telefón: </string>
	<string name="contacts_fax">FAX: </string>
	<string name="contacts_mail">E-mail: </string>
	<string name="contacts_matrika">Matrika rodná, sobášna a úmrtná:</string>
	<string name="contacts_checking">Overovanie listín a podpisov na listinách:</string>	
	<string name="contacts_evidence">Evidencia obyvateľov:</string>
	<string name="contacts_social">Sociílna oblasť:</string>
	<string name="contacts_hours">Úradné hodiny pre občanov nepretržite počas všetkých pracovných dní</string>
	<string name="contacts_monday">Pondelok: </string>
	<string name="contacts_tuesday">Utorok: </string>
	<string name="contacts_wednesday">Streda: </string>
	<string name="contacts_thursday">Štvrtok: </string>
	<string name="contacts_friday">Piatok: </string>
    
</resources>
